--- a/Ordre de Malte/src/assets/scss/partials/_footer.scss
+++ b/Ordre de Malte/src/assets/scss/partials/_footer.scss
@@ -1,4 +1,9 @@
 .footer {
+	.footer-col {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+	}
+
 	.spacer.footer-delimiter {
 		background-color: #d6d9dd;
 		border-radius: 5px;
