--- a/Ordre de Malte/src/partials/footer.html
+++ b/Ordre de Malte/src/partials/footer.html
@@ -1,5 +1,5 @@
 <row class="footer">
-    <columns>
+    <columns class="footer-col">
         <spacer size="6" class="footer-delimiter"></spacer>
         <spacer size="30"></spacer>
 
