--- a/Ordre de Malte/src/assets/scss/app.scss
+++ b/Ordre de Malte/src/assets/scss/app.scss
@@ -13,8 +13,8 @@
 // @import 'pages/email_abn_1';
 // @import 'pages/email_abn_2';
 // @import 'pages/email_abn_3';
-// @import 'pages/_email_don_1';
-// @import 'pages/email_don_2';
+@import 'pages/_email_don_1';
+@import 'pages/email_don_2';
 @import 'pages/email_don_3';
 
 @import 'partials/footer';
