email plus de force 1 2 3

--- a/Ordre de Malte/src/assets/scss/app.scss
+++ b/Ordre de Malte/src/assets/scss/app.scss
@@ -10,8 +10,11 @@
 //@import 'pages/email_leads_1';
 //@import 'pages/email_pa_2';
 //@import 'pages/email_pa_3';
-// @import 'pages/email_abn_1';
-// @import 'pages/email_abn_2';
-@import 'pages/email_abn_3';
+//@import 'pages/email_abn_1';
+//@import 'pages/email_abn_2';
+//@import 'pages/email_abn_3';
+// @import 'pages/email_force_1';
+// @import 'pages/email_force_2';
+@import 'pages/email_force_3';
 
 @import 'partials/footer';
